logs/scheduler.py.run.log
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
  File "/data/data/com.termux/files/home/godai-genesis/bots/scheduler.py", line 2
    ``]
      ^
SyntaxError: unmatched ']'
